<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2023 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">

  <!--  DO NOT add an app_name property when using this starter template; it is created automatically.-->
  <!--  <string name="app_name">App Starter</string>-->

  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="sign_out">Sign out</string>

  <string name="local_display_name_hint">Local Display Name</string>
  <string name="google_display_name_hint">Google Display Name</string>
  <string name="bearer_token_hint">Bearer Token</string>
  <string name="permissions_granted_hint">Permissions Granted</string>

  <string name="permissions_dialog_title">Permissions Needed</string>
  <string name="settings_label">Settings</string>

  <string name="access_fine_location_explanation" tools:keep="@string/access_fine_location_explanation">This app uses location information for …</string>
  <string name="access_coarse_location_explanation" tools:keep="@string/access_coarse_location_explanation">This app uses location information for …</string>
  <string name="post_notifications_explanation" tools:keep="@string/access_post_notifications_explanation">This app uses notifications for …</string>
  <string name="selectable_text_pref_key">selectable_text_pref</string>
  <string name="selectable_text_pref_title">Selectable text</string>
  <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
  <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>

  <string name="passphrase_name_fragment">Name fragment</string>
  <string name="search_description">Search for passphrases containing fragment text</string>
  <string name="refresh_description">Refresh list of passphrases</string>
  <string name="create_description">Create new passphrase</string>
  <string name="passphrase_name">Passphrase name</string>
  <string name="words">Words</string>
  <string name="length">Length</string>
  <string name="generate">Generate</string>
  <string name="passphrase_details">Passphrase Details</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>

</resources>