<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/name_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:hint="@string/passphrase_name"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/words_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/name_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/words"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textMultiLine"
      android:minLines="5"
      android:maxLines="5"
      android:layout_gravity="top|start"
      android:hint="@string/words"/>

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/length_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/length"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/length"
    app:layout_constraintTop_toTopOf="@id/length"
    app:layout_constraintBottom_toBottomOf="@id/length"/>

  <NumberPicker
    android:id="@+id/length"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintStart_toEndOf="@id/length_label"
    app:layout_constraintTop_toBottomOf="@id/words_layout"
    app:layout_constraintEnd_toStartOf="@id/generate"/>

  <Button
    android:id="@+id/generate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/generate"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintStart_toEndOf="@id/length"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/length"
    app:layout_constraintBottom_toBottomOf="@id/length"/>

</androidx.constraintlayout.widget.ConstraintLayout>